[angular][navbar is ugly][patient add form]

--- a/clinic-trial-activity-app/src/app/app.component.html
+++ b/clinic-trial-activity-app/src/app/app.component.html
@@ -1,8 +1,6 @@
 <div>
-  <mat-toolbar color="primary">
-
-</mat-toolbar>
-  <div>
-    <router-outlet></router-outlet>
-  </div>
+  <navbar-component></navbar-component>
+</div>
+<div>
+  <router-outlet></router-outlet>
 </div>
