--- a/clinic-trial-activity-app/src/app/navbar/navbar.component.html
+++ b/clinic-trial-activity-app/src/app/navbar/navbar.component.html
@@ -1,1 +1,5 @@
-<mat-toolbar>My App</mat-toolbar>
+<mat-toolbar color="primary">
+   <mat-toolbar-row>
+     <button mat-raised-button>Text</button>
+   </mat-toolbar-row>
+</mat-toolbar>
