[added patient view control buttons][implemented delete]

--- a/clinic-trial-activity-app/src/app/navbar/navbar.component.html
+++ b/clinic-trial-activity-app/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
    <mat-toolbar-row>
-     <button mat-raised-button>Text</button>
+      <a mat-button routerLink="/administration">Administration</a>
    </mat-toolbar-row>
 </mat-toolbar>
