--- a/clinic-trial-activity-app/src/app/administration/administration.component.html
+++ b/clinic-trial-activity-app/src/app/administration/administration.component.html
@@ -1,5 +1,12 @@
 <mat-tab-group>
-  <mat-tab label="One">
+  <mat-tab label="Patients">
+    <br/>
+
+    <!-- the new patient button -->
+    <a mat-raised-button routerLink="new" style="float: right;"
+        color = "primary">Add Patient</a>
+    
+    <br/><br/>
     <div class="table-container mat-elevation-z8">
       <mat-table #table [dataSource]="allPatientsDataSource">
 
@@ -27,21 +34,43 @@
           <mat-cell *matCellDef="let patient"> {{patient.person.birthDetails.dateOfBirth}}</mat-cell>
         </ng-container>
 
+         <!-- View link column -->
+         <ng-container matColumnDef="View">
+            <mat-header-cell *matHeaderCellDef> View </mat-header-cell>
+            <mat-cell *matCellDef="let patient">
+            <a [routerLink] = "['/view',patient.idPatient]"> 
+                  <i class="material-icons">pageview</i>
+            </a> 
+            </mat-cell>
+        </ng-container>
+
+         <!-- Edit link column -->
+        <ng-container matColumnDef="Edit">
+            <mat-header-cell *matHeaderCellDef> Edit </mat-header-cell>
+            <mat-cell *matCellDef="let patient">
+            <a [routerLink] = "['/edit',patient.idPatient]"> 
+                  <i class="material-icons">mode_edit</i>
+            </a> 
+            </mat-cell>
+        </ng-container>
+
+         <!-- Delete link column -->
+         <ng-container matColumnDef="Delete">
+            <mat-header-cell *matHeaderCellDef> Delete </mat-header-cell>
+            <mat-cell *matCellDef="let patient">
+            <a (click) = "deletePatient(patient)"> 
+                  <i class="material-icons">delete_sweep</i>
+            </a> 
+            </mat-cell>
+        </ng-container>
+
         <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
         <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
 
       </mat-table>
-      <!--
-      <mat-paginator #paginator
-                     [pageSize]="10"
-                     [pageSizeOptions]="[5, 10, 20]"
-                     [showFirstLastButtons]="true">
-      </mat-paginator>
-      -->
-
     </div>
   </mat-tab>
-  <mat-tab label="Two">
+  <mat-tab label="Organisations">
     <h1>Some more tab content</h1>
     <p>...</p>
   </mat-tab>
