--- a/clinic-trial-activity-app/src/app/navbar/navbar.component.html
+++ b/clinic-trial-activity-app/src/app/navbar/navbar.component.html
@@ -1,5 +1,7 @@
 <mat-toolbar color="primary">
    <mat-toolbar-row>
       <a mat-button routerLink="/administration">Administration</a>
+      <a mat-button routerLink="/trial">Trials</a>
+      <a mat-button routerLink="/crf">CRF</a>
    </mat-toolbar-row>
 </mat-toolbar>
