[refractored patient table as a standalone component][no more copy pasta]

--- a/clinic-trial-activity-app/src/app/app.component.html
+++ b/clinic-trial-activity-app/src/app/app.component.html
@@ -1,6 +1,4 @@
-<div>
-  <navbar-component></navbar-component>
-</div>
-<div>
-  <router-outlet></router-outlet>
-</div>
+<header _ngcontent-c0 = "">
+<navbar-component></navbar-component>
+</header>
+<router-outlet></router-outlet>
