--- a/clinic-trial-activity-app/src/app/trial/overview-page/trial-view.component.html
+++ b/clinic-trial-activity-app/src/app/trial/overview-page/trial-view.component.html
@@ -1,5 +1,3 @@
-
-  
 <mat-tab-group>
     <mat-tab label="Overview">
         <ng-template matTabContent>
@@ -169,16 +167,78 @@
 
 
     <mat-tab label="Forms">
-        <ng-template matTabContent></ng-template>
+        <ng-template matTabContent>
+            <div *ngIf="!formBuilder">
+                <mat-table #table [dataSource]="allCustomFormsDataSource">
+                    <!-- Form name column -->
+                    <ng-container matColumnDef="FormName">
+                        <mat-header-cell *matHeaderCellDef> Form Name </mat-header-cell>
+                        <mat-cell *matCellDef="let form"> {{form.name}} </mat-cell>
+                    </ng-container>
+
+                    <!-- Form last modified column -->
+                    <ng-container matColumnDef="LastModified">
+                        <mat-header-cell *matHeaderCellDef> Last Modified </mat-header-cell>
+                        <mat-cell *matCellDef="let form"> {{form.dateCreated}} </mat-cell>
+                    </ng-container>
+
+                    <!-- Edit link column -->
+                    <ng-container matColumnDef="Edit">
+                        <mat-header-cell *matHeaderCellDef> Edit </mat-header-cell>
+                        <mat-cell *matCellDef="let form">
+                            <a (click)="editForm(form)">
+                                <i class="material-icons">edit</i>
+                            </a>
+                        </mat-cell>
+                    </ng-container>
+
+                    <!-- Delete link column -->
+                    <ng-container matColumnDef="Delete">
+                        <mat-header-cell *matHeaderCellDef> Delete </mat-header-cell>
+                        <mat-cell *matCellDef="let form">
+                            <a (click)="deleteForm(form)">
+                                <i class="material-icons">delete_sweep</i>
+                            </a>
+                        </mat-cell>
+                    </ng-container>
+
+
+                    <mat-header-row *matHeaderRowDef="customFormColumns"></mat-header-row>
+                    <mat-row *matRowDef="let row; columns: customFormColumns;"></mat-row>
+                </mat-table>
+
+            </div>
+            <div class="floating-button" *ngIf="!formBuilder">
+                <button mat-fab color="primary" (click)=" formBuilder = !formBuilder">
+                    <mat-icon aria-label="New Custom Form">note_add</mat-icon>
+                </button>
+            </div>
+            <div *ngIf="formBuilder">
+                <crf-component></crf-component>
+            </div>
+        </ng-template>
     </mat-tab>
 
+    <mat-tab label="Patients">
+        <ng-template matTabContent>
+            <div *ngIf="patientSelect">
+                <patient-page [idTrial]="idTrial"></patient-page>
+            </div>
+            <div *ngIf="!patientSelect">
+                <patient-table [allPatientsDataSource]="allPatientsDataSource" [adminMode]=false></patient-table>
+                <div class="floating-button">
+
+                    <button mat-fab color="primary" (click)="patientSelection()">
+                        <mat-icon aria-label="Add">add</mat-icon>
+                    </button>
+                </div>
+            </div>
+        </ng-template>
+    </mat-tab>
 
     <mat-tab label="Records">
         <ng-template matTabContent></ng-template>
     </mat-tab>
 
-    <mat-tab label="Patients">
-        <ng-template matTabContent></ng-template>
-    </mat-tab>
-</mat-tab-group>
 
+</mat-tab-group>
