--- a/angular-app/src/app/administration/researcher/researcher-form.component.html
+++ b/angular-app/src/app/administration/researcher/researcher-form.component.html
@@ -140,7 +140,7 @@
         <tbody>
           <tr>
             <td>
-              <h5>Organisation {{researcher.employer.name}} selected</h5>
+              <h5>Organisation {{orgName}} selected</h5>
             </td>
             <td>
               <a mat-button (click)="onCancel()">Cancel selection</a>
