--- a/angular-app/src/app/components/patient-page/patient-page.component.html
+++ b/angular-app/src/app/components/patient-page/patient-page.component.html
@@ -14,6 +14,6 @@
 </table>
 <br/>
 
-<patient-table [allPatientsDataSource]="allPatientsDataSource" [adminMode]=false [idTrial]="idTrial"></patient-table>
+<patient-table [allPatientsDataSource]="allPatientsDataSource" [adminMode]=false [idTrial]="idTrial" [enrol]=true></patient-table>
 <br/>
 <button mat-raised-button (click)="cancel()" style="float: right, down;" color="primary">Cancel</button>
