--- a/angular-app/src/app/components/patient/patient-table.component.html
+++ b/angular-app/src/app/components/patient/patient-table.component.html
@@ -27,52 +27,30 @@
             </ng-container>
 
             <!-- View link column -->
-            <ng-container matColumnDef="View">
-                <mat-header-cell *matHeaderCellDef> View </mat-header-cell>
+            <ng-container matColumnDef="Actions">
+                <mat-header-cell *matHeaderCellDef>  </mat-header-cell>
                 <mat-cell *matCellDef="let patient">
-                    <a [routerLink]="['/view',patient.idPatient]">
+                    <a mat-button [routerLink]="['/view',patient.idPatient]" color="primary">
                         <i class="material-icons">pageview</i>
                     </a>
-                </mat-cell>
-            </ng-container>
-
-            <!-- Edit link column -->
-            <ng-container matColumnDef="Complete Form">
-                <mat-header-cell *matHeaderCellDef> Complete Form </mat-header-cell>
-                <mat-cell *matCellDef="let patient">
-                    <a (click)="openFormSelection(patient)">
+                    <a mat-button (click)="openFormSelection(patient)" color="primary" *ngIf="!adminMode">
                         <i class="material-icons">assignment</i>
                     </a>
-                </mat-cell>
-            </ng-container>
-
-
-            <!-- Edit link column -->
-            <ng-container matColumnDef="Edit" *ngIf="adminMode">
-                <mat-header-cell *matHeaderCellDef> Edit </mat-header-cell>
-                <mat-cell *matCellDef="let patient">
-                    <a [routerLink]="['new',patient.idPatient]">
+                    <a mat-button [routerLink]="['new',patient.idPatient]" *ngIf="adminMode" color="primary">
                         <i class="material-icons">mode_edit</i>
                     </a>
-                </mat-cell>
-            </ng-container>
-
-            <!-- Delete link column -->
-            <ng-container matColumnDef="Delete" *ngIf="adminMode">
-                <mat-header-cell *matHeaderCellDef> Delete </mat-header-cell>
-                <mat-cell *matCellDef="let patient">
-                    <a (click)="deletePatient(patient)">
+                    <a mat-button (click)="deletePatient(patient)" *ngIf="adminMode" color="primary">
                         <i class="material-icons">delete_sweep</i>
                     </a>
                 </mat-cell>
             </ng-container>
 
             <!-- Enroll link column -->
-            <ng-container matColumnDef="Enroll" *ngIf="!adminMode && idTrial != null">
-                <mat-header-cell *matHeaderCellDef> Enroll </mat-header-cell>
+            <ng-container matColumnDef="Enroll" *ngIf="enrol">
+                <mat-header-cell *matHeaderCellDef>  </mat-header-cell>
                 <mat-cell *matCellDef="let patient">
                     <button mat-raised-button color="primary" (click)="enrollPatient(patient)">
-                        Enroll
+                        Enrol
                     </button>
                 </mat-cell>
             </ng-container>
@@ -83,6 +61,6 @@
         </mat-table>
     </div>
 </div>
-<div *ngIf = "displayForm">
-    <custom-form [idPatient] = "patientSelection" [idForm] = "formSelection"></custom-form>
+<div *ngIf="displayForm">
+    <custom-form [idPatient]="patientSelection" [idForm]="formSelection"></custom-form>
 </div>
