--- a/angular-app/src/app/trial/trial.component.html
+++ b/angular-app/src/app/trial/trial.component.html
@@ -3,10 +3,10 @@
 </div>
 
 <br/>
-<div>
-  <a mat-raised-button routerLink="new" style="float: right;" color="primary">Start a new trial</a>
-  <br/>
-  <br/>
+<div class="floating-button">
+  <a mat-fab routerLink="new" color="primary">
+    <mat-icon aria-label="New Custom Form">add</mat-icon>
+  </a>
 </div>
 <div class="table-container mat-elevation-z8">
   <mat-table #table [dataSource]="allTrialsDataSource">
@@ -39,7 +39,7 @@
     <ng-container matColumnDef="Access">
       <mat-header-cell *matHeaderCellDef> </mat-header-cell>
       <mat-cell *matCellDef="let trial">
-        <a [routerLink]="['/trial/view',trial.idTrial]">
+        <a mat-button [routerLink]="['/trial/view',trial.idTrial]" color="primary">
           <i class="material-icons">pageview</i>
         </a>
       </mat-cell>
